Modification du titre H1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Un supper titre</h1>
+    <h1>Un supper super super titre</h1>
 </body>
 </html>
