notre application cagnotte

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Un supper super super titre</h1>
+
+    <p> Nous voulons voir l'évolution cagnotte de notre apprentissage</p>
 </body>
 </html>
